Update azure-pipelines.yml for Azure Pipelines

--- a/scripts/azure-pipelines.yml
+++ b/scripts/azure-pipelines.yml
@@ -5,4 +5,6 @@ jobs:
     steps:
       - checkout: none
       - pwsh: |
-          Invoke-WebRequest -Uri $(TIZEN_STUDIO_URL) -Headers @{"Authorization"="token $(GitHub.Token)"} -OutFile "tizen-studio.zip"
+          $token = '$(GitHub.Token)'
+          $uri = '$(TIZEN_STUDIO_URL)'
+          Invoke-WebRequest -Uri $uri -Headers @{"Authorization"="token $token"} -OutFile "tizen-studio.zip"
