--- a/scripts/azure-pipelines.yml
+++ b/scripts/azure-pipelines.yml
@@ -7,6 +7,6 @@ jobs:
       - pwsh: |
           Invoke-WebRequest -Uri "$(TIZEN_STUDIO_URL)" -Headers @{"Authorization"="$(TIZEN_STUDIO_TOKEN)"} -OutFile "$(Agent.HomeDirectory)/tizen-studio.zip"
           Expand-Archive -Path "$(Agent.HomeDirectory)/tizen-studio.zip" -DestinationPath "$(Agent.HomeDirectory)/tizen-studio"
-          Remove-Item -Path "$env:HOME/tizen-studio" -Recurse -Force
+          Remove-Item -Path "$(Agent.HomeDirectory)/tizen-studio" -Recurse -Force
           Expand-Archive -Path "$(Agent.HomeDirectory)/tizen-studio.zip" -DestinationPath "$(Agent.HomeDirectory)/tizen-studio"
           cat $(Agent.HomeDirectory)/tizen-studio/sdk.version
