Added MS ANGLE to the externals (#8)
Co-authored-by: Matthew Leibowitz <mattleibow@live.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "depot_tools"]
 	path = externals/depot_tools
 	url = https://chromium.googlesource.com/chromium/tools/depot_tools.git
+[submodule "externals/angle_desktop"]
+	path = externals/angle_desktop
+	url = https://github.com/Microsoft/angle.git
